grammar.js
        source_file: ($) => repeat($._module),

        // Can statement-ise anything so we'll use this as top-level.
        // _statement: ($) => choice($._expression_statement, $._declaration_statement),
        // _expression_statement: ($) => seq($._expression, ';'),
        _module: ($) => choice($._top_level_item),

        // Noirc: Module -- Since doc comments can appear anywhere, Module is Item which is ItemKind.
        visibility_modifier: $ => seq('pub', optional('(crate)')),
        
        // [[file:noir_grammar.org::visibility]]
        global_item: $ => seq(
            optional($.visibility_modifier),
            repeat(choice($.mutable_modifier, $.comptime_modifier)),
            'global',
            field('name', $.identifier),
            field('type', optional($._type_annotation)), // Inlined Noirc: OptionalTypeAnnotation.,
            '=',
            $._expression,
            ';',
        ),
        // TODO: TypeAlias
        
        // [[file:noir_grammar.org::function]]
        function_item: $ => seq(
            optional($.visibility_modifier),
            repeat(choice($.comptime_modifier, $.unconstrained_modifier)),
            'fn',
            field('name', $.identifier),
            field('type_parameters', optional($._generic_parameters)),
            field('parameters', $.function_parameters),
            optional(seq('->', optional($.visibility), $._type)),
            optional($.where_clause),
            // No optional body allowed at this locus.
            field('body', $.block),
        ),
        // [[file:noir_grammar.org::function_parameters]]
        _statement: $ => seq(
            // TODO: Attributes.
            choice(
                // Inlined Noirc: StatementKind.
                $.break_statement,
                $.continue_statement,
                $.return_statement,
                $.let_statement,
                $.constrain_statement,
                $.comptime_statement,
                $.for_statement,
                $.if_expression,
                $.block,
                $.assign_statement,
                $.expression_statement,
            ),
        ),
        
        // [[file:noir_grammar.org::break_statement]]
        break_statement: _ => seq('break', ';'),
        // [[file:noir_grammar.org::continue_statement]]
        continue_statement: _ => seq('continue', ';'),
        // [[file:noir_grammar.org::return_statement]]
        return_statement: $ => seq('return', optional($._expression), ';'),
        // [[file:noir_grammar.org::let_statement]]
        let_statement: $ => seq(
            'let',
            optional($.mut_bound),
            field('pattern', $._pattern),
            field('type', optional($._type_annotation)), // Inlined Noirc: OptionalTypeAnnotation.,
            '=',
            field('value', $._expression),
            ';',
        ),
        // [[file:noir_grammar.org::constrain_statement]]
        constrain_statement: $ => seq(
            // XXX: Keyword 'constrain' is deprecated, we're not going to include it at all.
            // 'assert' expects 1 or 2 parameters, 'assert_eq' expects 2 or 3. This is out of scope for tree-sitter grammar (at least for now), if it's a boon without huge complexity the rules can be augmented to enforce this later.
            choice('assert', 'assert_eq'),
            field('arguments', $.arguments),
            ';',
        ),
        // [[file:noir_grammar.org::comptime_statement]]
        for_statement: $ => seq(
            'for',
            field('value', $.identifier),
            'in',
            field('range', choice(
                $._expression,
                $.range_expression,
            )),
            field('body', $.block),
        ),
        // [[file:noir_grammar.org::assign_statement]]
        assign_statement: $ => seq(
            field('left', $._expression),
            choice(
                // Desugared (and limited) binary expression assignment, see: next_is_op_assign.
                '+=', '-=', '*=', '/=', '%=', '&=', '^=', '=',
                // Simple assignment.
                '=',
            ),
            field('right', $._expression),
            ';',
        ),
        // [[file:noir_grammar.org::expression_statement]]
        expression_statement: $ => seq($._expression, ';'),

        // * * * * * * * * * * * * * * * * * * * * * * * * * EXPRESSIONS
        
        // [[file:noir_grammar.org::expression]]
        _expression: $ => prec(1, choice(
            $.binary_expression,
            // Inlined Noirc: Atom.
            $.__literal,
              // Inlined Noirc: ParenthesesExpression.
              alias($.unit_type, $.unit_expression),
              $.parenthesized_expression,
              $.tuple_expression,
            $.unsafe_block,
              // Inlined Noirc: PathExpression.
              $.path, // Inlined Noirc: VariableExpression.
              $.struct_expression,
            $.if_expression,
            $.lambda,
            // ---/ End: Atom.
            // TODO: SURELY identifier is allowed in expression, where's the concrete evidence though? Assuming it is for now.
            $.identifier,
        )),
        
        // [[file:noir_grammar.org::binary_expression]]
        binary_expression: $ => {
            const t = [
                // Highest to lowest.
                [PRECEDENCE.multiplicitive, choice('*', '/', '%',)],
                [PRECEDENCE.additive, choice('+', '-')],
                [PRECEDENCE.bitshift, choice('<<', '>>')],
                [PRECEDENCE.comparative, choice('<', '<=', '>', '>=')],
                [PRECEDENCE.bitxor, '^'],
                [PRECEDENCE.bitand, '&'],
                [PRECEDENCE.or, '|'],
                [PRECEDENCE.equality, choice('==', '!=')],
            ]
        
            return choice(...t.map(([p, o]) => prec.left(p, seq(
                field('left', $._expression),
                field('operator', o),
                field('right', $._expression),
            ))))
        },
        
        // [[file:noir_grammar.org::quote_expression]]
        block: $ => seq(
            '{',
            repeat($._statement),
            optional($._expression),
            '}',
        ),
        
        // [[file:noir_grammar.org::arguments]]
        arguments: $ => seq(
            '(',
            sepBy($._expression, ','), // Inlined Noirc: ArgumentsList.
            optional(','),
            ')',
        ),
        // [[file:noir_grammar.org::call_arguments]]
        range_expression: $ => seq(
            $._expression,
            '..',
            optional(token.immediate('=')),
            $._expression,
        ),
        
        // Ordered as at Atom.
        
        // [[file:noir_grammar.org::parenthesised_expression]]
        _type: $ => choice(
            $.primitive_type,
            $._parentheses_type,
            // $.array_or_slice_type,
            // $.mutable_reference_type,
            // $.function_type,
            // TODO: TraitAsType, AsTraitPathType, UnresolvedNamedType
            $.identifier_or_path_no_turbofish,
        ),
        
        // [[file:noir_grammar.org::type_annotation]]
        _type_annotation: $ => seq(':', $._type),
        
        // [[file:noir_grammar.org::primitive_type]]
        primitive_type: $ => choice(
            $.__field_type,
            $.__integer_type,
            $.__bool_type,
            $.__string_type,
            $.__format_string_type,
        ),
        // [[file:noir_grammar.org::field_type]]
        __field_type: _ => 'Field',
        // [[file:noir_grammar.org::int_type]]
        __integer_type: _ => choice(...INTEGER_TYPES),
        // [[file:noir_grammar.org::bool_type]]
        __bool_type: _ => 'bool',
        // [[file:noir_grammar.org::str_type]]
        __string_type: $ => seq(
            'str',
            '<',
            // TODO: TypeExpression goes here.
            '>',
        ),
        // [[file:noir_grammar.org::fmt_str_type]]
        __format_string_type: _ => 'fmtstr',
        
        // [[file:noir_grammar.org::parentheses_type]]
        unit_type: _ => seq('(', ')'),
        // [[file:noir_grammar.org::tuple_type]]
        _pattern: $ => seq(
            // alias(seq($.mut_bound, $._pattern_no_mut), $.mut_pattern),
            // optional($.mut_bound),
            $._pattern_no_mut,
        ),
        // [[file:noir_grammar.org::pattern_no_mut]]
        tuple_pattern: $ => seq(
            '(',
            sepBy($._pattern, ','), // Inlined Noirc: PatternList.
            optional(','),
            ')',
        ),
        
        // [[file:noir_grammar.org::struct_pattern]]
        _generic_parameters: $ => alias($._generics, $.type_parameters),
        // [[file:noir_grammar.org::generic_type_parameters]]
        bool_literal: _ => choice('true', 'false'),
        
        // [[file:noir_grammar.org::int]]
        int_literal: _ => token(seq(
            choice(
                /[0-9][0-9_]*/,
                /0x[0-9a-fA-F_]+/,
            )
        )),
        
        // [[file:noir_grammar.org::str]]
        str_literal: $ => seq(
            '"',
            repeat(choice(
                $.str_content,
                $.escape_sequence,
                // $.str_content,
                // $.escape_sequence,
            )),
            token.immediate('"'),
        ),
        // [[file:noir_grammar.org::str_content]]
        str_content: _ => /[\x20-\x21\x23-\x5B\x5D-\x7E\s]+/,
        // [[file:noir_grammar.org::escape_sequence]]
        identifier: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,
        
        // Modifiers except for visibility (in order).
        
        // [[file:noir_grammar.org::modifier_mut]]
        mutable_modifier: _ => 'mut',
        // [[file:noir_grammar.org::modifier_comptime]]
        mut_bound: _ => 'mut',
